SES-1696 removed com.sun Base64 class, using more standardized javax.xml.bind.DatatypeConverter instead.